5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1798_2564.log
== TEST (2019-06-10 13:50:57) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=cont[0]+1
	elif(gols[n]<golsc[n]):
		cont[2]=cont[2]+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:51:47) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=cont[0]+1
	elif(gols[n]<golsc[n]):
		cont[2]=cont[2]+1
	elif(gols[n]==golsc[n]):
		cont[1]=cont[1]+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:52:08) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=cont[0]+1
	elif(gols[n]<golsc[n]):
		cont[2]=cont[2]+1
	elif(gols[n]==golsc[n]):
		cont[1]=cont[1]+1
print(cont)
-- EXECUTION TIME:
5.22114
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 10, in <module>
    cont[2]=cont[2]+1
IndexError: index 2 is out of bounds for axis 0 with size 0

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:52:19) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=cont[0]+1
	elif(gols[n]<golsc[n]):
		cont[2]=cont[2]+1
	elif(gols[n]==golsc[n]):
		cont[1]=cont[1]+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:52:20) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=cont[0]+1
	elif(gols[n]<golsc[n]):
		cont[2]=cont[2]+1
	elif(gols[n]==golsc[n]):
		cont[1]=cont[1]+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:52:21) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=cont[0]+1
	elif(gols[n]<golsc[n]):
		cont[2]=cont[2]+1
	elif(gols[n]==golsc[n]):
		cont[1]=cont[1]+1
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:54:13) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=1+cont[0]
	elif(gols[n]<golsc[n]):
		cont[2]=1+cont[2]
	elif(gols[n]==golsc[n]):
		cont[1]=1+cont[1]
print(cont) 
-- EXECUTION TIME:
5.27786
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 10, in <module>
    cont[2]=1+cont[2]
IndexError: index 2 is out of bounds for axis 0 with size 0

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:55:52) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=1+cont[0]
	elif(gols[n]<golsc[n]):
		cont[2]=1+cont[2]
	elif(gols[n]==golsc[n]):
		cont[1]=1+cont[1]
print(cont) 
-- EXECUTION TIME:
6.45101
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 10, in <module>
    cont[2]=1+cont[2]
IndexError: index 2 is out of bounds for axis 0 with size 0

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:55:54) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=1+cont[0]
	elif(gols[n]<golsc[n]):
		cont[2]=1+cont[2]
	elif(gols[n]==golsc[n]):
		cont[1]=1+cont[1]
print(cont) 
-- EXECUTION TIME:
8.34336
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 10, in <module>
    cont[2]=1+cont[2]
IndexError: index 2 is out of bounds for axis 0 with size 0

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:56:08) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
	for n in range(size(gols)):
		if(gols[n]>golsc[n]):
			cont[0]=1+cont[0]
		elif(gols[n]<golsc[n]):
			cont[2]=1+cont[2]
		elif(gols[n]==golsc[n]):
			cont[1]=1+cont[1]
	print(cont) 
-- ERROR:
File "XXXX", line 6
    for n in range(size(gols)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:56:27) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=1+cont[0]
	elif(gols[n]<golsc[n]):
			cont[2]=1+cont[2]
	elif(gols[n]==golsc[n]):
			cont[1]=1+cont[1]
print(cont) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:56:32) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=1+cont[0]
	elif(gols[n]<golsc[n]):
		cont[2]=1+cont[2]
	elif(gols[n]==golsc[n]):
		cont[1]=1+cont[1]
print(cont) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:56:34) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=1+cont[0]
	elif(gols[n]<golsc[n]):
		cont[2]=1+cont[2]
	elif(gols[n]==golsc[n]):
		cont[1]=1+cont[1]
print(cont) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 13:58:11) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=1+cont[0]
	elif(gols[n]<golsc[n]):
		cont[2]=1+cont[2]
	elif(gols[n]==golsc[n]):
		cont[1]=1+cont[1]
print(cont) 
-- EXECUTION TIME:
5.78186
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2564/main.py", line 10, in <module>
    cont[2]=1+cont[2]
IndexError: index 2 is out of bounds for axis 0 with size 0

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 13:59:24) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=0
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=1+cont[0]
	elif(gols[n]<golsc[n]):
		cont[2]=1+cont[2]
	elif(gols[n]==golsc[n]):
		cont[1]=1+cont[1]
print(cont) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:02:03) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=3
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=1+cont[0]
	elif(gols[n]<golsc[n]):
		cont[2]=1+cont[2]
	elif(gols[n]==golsc[n]):
		cont[1]=1+cont[1]
print(cont) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:02:23) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=3
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=1+cont[0]
	elif(gols[n]<golsc[n]):
		cont[2]=1+cont[2]
	elif(gols[n]==golsc[n]):
		cont[1]=1+cont[1]
print(cont) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:03:19) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=3
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=1+cont[0]
	elif(gols[n]<golsc[n]):
		cont[2]=1+cont[2]
	elif(gols[n]==golsc[n]):
		cont[1]=1+cont[1]
print(cont) 
-- EXECUTION TIME:
4.68492
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
GOl:GOls sofridos:[12  1  0]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 14:04:38) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=3
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=1+cont[0]
	elif(gols[n]<golsc[n]):
		cont[2]=1+cont[2]
	elif(gols[n]==golsc[n]):
		cont[1]=1+cont[1]
print(cont) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 14:08:35) 
-- CODE:
from numpy import*
gols=array(eval(input("GOl:")))
golsc=array(eval(input("GOls sofridos:")))
i=3
cont=zeros(i, dtype=int)
for n in range(size(gols)):
	if(gols[n]>golsc[n]):
		cont[0]=1+cont[0]
	elif(gols[n]<golsc[n]):
		cont[2]=1+cont[2]
	elif(gols[n]==golsc[n]):
		cont[1]=1+cont[1]
print(cont) 
-- EXECUTION TIME:
0.928203
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
